# wg-monitor

./: .gitignore  CMakeLists.txt  README.md  compile  http.cpp  wg-extension.cpp  wg-monitor.service
cmake/: dist.sh
public/: index.html
public/js/: index.js
src/: HTTPServer.cpp  HTTPServer.hpp  Hook.cpp  Hook.hpp  Monitor.cpp  Monitor.hpp  PCH.hpp  http.cpp  http.hpp  log.cpp  log.hpp  main.cpp  tools.cpp  tools.hpp  wg-extension.cpp  wg-extension.hpp
www/js/: ajax.js
